--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		<div id="container" class="container-fluid">
 
-			<header><span class="blue">Solcito</span>Backup</header>
+			<header><span class="blue">Solcito</span>Backup - Augustus</header>
 
 			<div class="row-fluid">
 				<div id="sidebar" class="span3">
